# lintML

./: .pre-commit-config.yaml  README.md  ipynb_convert.py  ml-lint.py  pyproject.toml  report.py  requirements.txt  semgrep.py  trufflehog.py
MLLint/: ipynb_convert.py  observation.py  semgrep.py  utils.py
lintML/: cli.py  ipynb_convert.py  lintML.py  report.py  semgrep.py  trufflehog.py  utils.py
lintML/schemas/: observation.avsc
lintML/semgrep_rules/draft/: tensorflow-load-library.yaml
lintML/semgrep_rules/ready/: tob_pickles-in-numpy.yaml
obs/: observation.avro
semgrep_rules/ready/: huggingface-remote-code.yaml  pickles-in-numpy.yaml  pickles-in-pandas.yaml  pickles-in-pytorch.yaml  pickles.yaml  scikit-joblib-load.yaml  sg_shelve.yaml  tob_pickles-in-pytorch.yaml  tob_scikit-joblib-load.yaml
src/: MLLint.py  semgrep.py  trufflehog.py
src/obs/: observation.avro
src/semgrep_rules/draft/: tarfile-extractall-traversal.yaml
src/semgrep_rules/ready/: tob_pickles-in-pandas.yaml
test/: risky.ipynb
