[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mllint"
version = "0.0.1"
authors = [
  { name="Joe Lucas", email="joe@joetl.com"},
]
description = "Security-focused linter for machine learning training code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JosephTLucas/ml-lint"
"Bug Tracker" = "https://github.com/JosephTLucas/ml-lint/issues"