[tool.poetry]
name = "lintml"
version = "0.0.5"
description = "A security-first linter for machine learning training code."
authors = ["Joseph Lucas <joe@joetl.com>"]
license = "GPL-3.0-only"
readme = "README.md"

packages = [
    { include = "lintML" }
]

[tool.poetry.scripts]
lintML = 'lintML.lintML:cli'

[tool.poetry.dependencies]
python = "^3.11"
asttokens = "2.4.0"
attrs = "23.1.0"
avro = "1.11.2"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
docker = "6.1.3"
executing = "1.2.0"
fastavro = "1.8.3"
fastjsonschema = "2.18.0"
idna = "3.4"
ipython = "8.15.0"
jedi = "0.19.0"
jinja2 = "3.1.2"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
jupyter-client = "8.3.1"
jupyter-core = "5.3.1"
jupyterlab-pygments = "0.2.2"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
mistune = "3.0.1"
nbclient = "0.8.0"
nbconvert = "7.8.0"
nbformat = "5.9.2"
packaging = "23.1"
pandocfilters = "1.5.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pip = "23.2.1"
platformdirs = "3.10.0"
prompt-toolkit = "3.0.39"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.16.1"
python-dateutil = "2.8.2"
pyzmq = "25.1.1"
referencing = "0.30.2"
requests = "2.31.0"
rpds-py = "0.10.2"
setuptools = "68.1.2"
six = "1.16.0"
soupsieve = "2.5"
stack-data = "0.6.2"
tinycss2 = "1.2.1"
tornado = "6.3.3"
traitlets = "5.9.0"
urllib3 = "2.0.4"
wcwidth = "0.2.6"
webencodings = "0.5.1"
websocket-client = "1.6.2"
wheel = "0.41.2"
importlib-resources = "^6.0.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
